fix: [CDS-85994]: Fixed input set long name overlapping issue (#19410)

--- a/src/modules/70-pipeline/components/InputSetForm/InputSetForm.module.scss
+++ b/src/modules/70-pipeline/components/InputSetForm/InputSetForm.module.scss
@@ -33,6 +33,10 @@
   transform: translate(50%, 0);
 }
 
+.editTitle {
+  max-width: 320px;
+}
+
 .collapseDiv div {
   border-top: none;
   padding: 0;
